// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getField for Form 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2ManyTags-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    disabled={undefined}
    multi={true}
    noResultsText="No results found"
    onChange={[Function]}
    onInputChange={[Function]}
    onOpen={[Function]}
    options={Array []}
    value={
      Array [
        "1",
        "2",
      ]
    }
  />
</div>
`;

exports[`getField for Form 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2ManyTags-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    disabled={undefined}
    multi={true}
    noResultsText="No results found"
    onChange={[Function]}
    onInputChange={[Function]}
    onOpen={[Function]}
    options={
      Array [
        Object {
          "label": "todo 1",
          "value": "1",
        },
        Object {
          "label": "todo 2",
          "value": "2",
        },
        Object {
          "label": "todo 3",
          "value": "3",
        },
      ]
    }
    value={
      Array [
        "1",
        "2",
      ]
    }
  />
</div>
`;

exports[`getField for Form readonly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2ManyTags-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <div
    disabled={true}
    multi={true}
    noResultsText="No results found"
    onChange={[Function]}
    onInputChange={[Function]}
    onOpen={[Function]}
    options={Array []}
    value={
      Array [
        "1",
        "2",
      ]
    }
  />
</div>
`;

exports[`getField for Form readonly 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2ManyTags-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <div
    disabled={true}
    multi={true}
    noResultsText="No results found"
    onChange={[Function]}
    onInputChange={[Function]}
    onOpen={[Function]}
    options={
      Array [
        Object {
          "label": "todo 1",
          "value": "1",
        },
        Object {
          "label": "todo 2",
          "value": "2",
        },
        Object {
          "label": "todo 3",
          "value": "3",
        },
      ]
    }
    value={
      Array [
        "1",
        "2",
      ]
    }
  />
</div>
`;

exports[`getField for Form with empty value 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2ManyTags-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    disabled={undefined}
    multi={true}
    noResultsText="No results found"
    onChange={[Function]}
    onInputChange={[Function]}
    onOpen={[Function]}
    options={Array []}
    value={Array []}
  />
</div>
`;

exports[`getField for Form with empty value 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2ManyTags-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    disabled={undefined}
    multi={true}
    noResultsText="No results found"
    onChange={[Function]}
    onInputChange={[Function]}
    onOpen={[Function]}
    options={
      Array [
        Object {
          "label": "todo 1",
          "value": "1",
        },
        Object {
          "label": "todo 2",
          "value": "2",
        },
        Object {
          "label": "todo 3",
          "value": "3",
        },
      ]
    }
    value={Array []}
  />
</div>
`;
